--- a/GUI/XIB files/Inspector.xib
+++ b/GUI/XIB files/Inspector.xib
@@ -86,6 +86,7 @@
                 <outlet property="stepIntoButton" destination="EYA-b4-jd8" id="X7c-oQ-vYS"/>
                 <outlet property="stepOverButton" destination="XcS-nk-XBp" id="Blq-Hv-IZy"/>
                 <outlet property="stopAndGoButton" destination="DQ4-Ah-ce3" id="hhb-ps-zLf"/>
+                <outlet property="tiaPalette" destination="0eB-vG-5cu" id="frs-17-Xrt"/>
                 <outlet property="timeStamp" destination="DGV-Ov-f8V" id="dll-ac-LOR"/>
                 <outlet property="window" destination="QvC-M9-y7g" id="4y3-MY-rvW"/>
             </connections>
@@ -1508,12 +1509,22 @@
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             </view>
                                         </box>
-                                        <box fixedFrame="YES" title="Lightpen" translatesAutoresizingMaskIntoConstraints="NO" id="gmV-of-qQ5">
-                                            <rect key="frame" x="552" y="219" width="264" height="154"/>
+                                        <box fixedFrame="YES" title="Palette" translatesAutoresizingMaskIntoConstraints="NO" id="gmV-of-qQ5">
+                                            <rect key="frame" x="552" y="4" width="264" height="369"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <view key="contentView" id="o1q-vt-wPJ">
-                                                <rect key="frame" x="4" y="5" width="256" height="134"/>
+                                                <rect key="frame" x="4" y="5" width="256" height="349"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                <subviews>
+                                                    <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0eB-vG-5cu">
+                                                        <rect key="frame" x="20" y="20" width="216" height="309"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                                        <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" imagePosition="only" alignment="center" imageScaling="axesIndependently" inset="2" id="7DL-28-fAs">
+                                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                                            <font key="font" metaFont="system"/>
+                                                        </buttonCell>
+                                                    </button>
+                                                </subviews>
                                             </view>
                                         </box>
                                         <box fixedFrame="YES" title="Memory" translatesAutoresizingMaskIntoConstraints="NO" id="5Gf-ZX-tRF">
@@ -1537,14 +1548,6 @@
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                             <view key="contentView" id="wMk-yS-0xC">
                                                 <rect key="frame" x="4" y="5" width="256" height="189"/>
-                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                            </view>
-                                        </box>
-                                        <box fixedFrame="YES" title="Sprites" translatesAutoresizingMaskIntoConstraints="NO" id="Vy1-vO-GXi">
-                                            <rect key="frame" x="552" y="2" width="264" height="211"/>
-                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                            <view key="contentView" id="xpU-bX-3kA">
-                                                <rect key="frame" x="4" y="5" width="256" height="191"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             </view>
                                         </box>
