--- a/GUI/XIB files/Base.lproj/MyDocument.xib
+++ b/GUI/XIB files/Base.lproj/MyDocument.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="23094" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="23504" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="23094"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="23504"/>
+        <capability name="Combo buttons" minToolsVersion="14.0" minSystemVersion="13.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -31,7 +32,7 @@
             <rect key="screenRect" x="0.0" y="0.0" width="1496" height="933"/>
             <value key="minSize" type="size" width="402" height="323"/>
             <view key="contentView" id="6">
-                <rect key="frame" x="0.0" y="0.0" width="800" height="640"/>
+                <rect key="frame" x="0.0" y="0.0" width="800" height="630"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
                     <button toolTip="Warp mode" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1052">
@@ -46,7 +47,7 @@
                         </connections>
                     </button>
                     <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DD4-5B-w9h" customClass="MetalView" customModule="Tiara" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="26" width="800" height="614"/>
+                        <rect key="frame" x="0.0" y="26" width="800" height="604"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <connections>
                             <outlet property="parent" destination="-2" id="DoA-Vt-vqv"/>
@@ -117,7 +118,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                         <popUpButtonCell key="cell" type="bevel" title="C64 Frequency" bezelStyle="regularSquare" imagePosition="left" lineBreakMode="truncatingTail" state="on" transparent="YES" inset="2" preferredEdge="minX" selectedItem="LP1-PF-LdL" id="qjo-CF-dOg">
                             <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
-                            <font key="font" metaFont="menu"/>
+                            <font key="font" metaFont="message"/>
                             <menu key="menu" id="m7b-17-QHH">
                                 <items>
                                     <menuItem title="C64 Frequency" state="on" id="LP1-PF-LdL"/>
@@ -152,7 +153,7 @@
                     </stepper>
                 </subviews>
             </view>
-            <toolbar key="toolbar" implicitIdentifier="562FDE63-25B0-4E4E-80C7-EF6E742B5F6F" displayMode="iconAndLabel" sizeMode="regular" id="1845" customClass="MyToolbar" customModule="Tiara" customModuleProvider="target">
+            <toolbar key="toolbar" implicitIdentifier="562FDE63-25B0-4E4E-80C7-EF6E742B5F6F" showsBaselineSeparator="NO" displayMode="iconAndLabel" sizeMode="regular" id="1845" customClass="MyToolbar" customModule="Tiara" customModuleProvider="target">
                 <allowedToolbarItems>
                     <toolbarItem implicitItemIdentifier="B3E0ED18-38A1-47E0-8714-6499B91888F8" label="Inspectors" paletteLabel="Inspectors" sizingBehavior="auto" id="GsP-C7-APh">
                         <nil key="toolTip"/>
@@ -213,9 +214,9 @@
                         <popUpButton key="view" tag="10" id="L2b-nG-yBo" userLabel="Port 1">
                             <rect key="frame" x="0.0" y="14" width="45" height="20"/>
                             <autoresizingMask key="autoresizingMask"/>
-                            <popUpButtonCell key="cell" type="roundTextured" title="None" bezelStyle="texturedRounded" image="devNoneTemplate" imagePosition="only" alignment="center" lineBreakMode="truncatingTail" state="on" tag="-1" imageScaling="proportionallyUpOrDown" inset="2" autoenablesItems="NO" selectedItem="VD3-Wr-Ufe" id="Oxd-8A-P5o" userLabel="PopupButtonCell">
+                            <popUpButtonCell key="cell" type="roundTextured" title="None" bezelStyle="texturedRounded" imagePosition="only" alignment="center" lineBreakMode="truncatingTail" state="on" tag="-1" imageScaling="proportionallyUpOrDown" inset="2" autoenablesItems="NO" selectedItem="VD3-Wr-Ufe" id="Oxd-8A-P5o" userLabel="PopupButtonCell">
                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                <font key="font" metaFont="menu"/>
+                                <font key="font" metaFont="message"/>
                                 <menu key="menu" autoenablesItems="NO" id="zHf-yH-YTM">
                                     <items>
                                         <menuItem title="None" state="on" image="devNoneTemplate" tag="-1" id="VD3-Wr-Ufe"/>
@@ -242,7 +243,7 @@
                             <autoresizingMask key="autoresizingMask"/>
                             <popUpButtonCell key="cell" type="roundTextured" title="None" bezelStyle="texturedRounded" imagePosition="only" alignment="center" lineBreakMode="truncatingTail" state="on" tag="-1" imageScaling="proportionallyDown" inset="2" autoenablesItems="NO" selectedItem="xyt-eC-0im" id="skK-6M-sib" userLabel="PopupButtonCell">
                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                <font key="font" metaFont="menu"/>
+                                <font key="font" metaFont="message"/>
                                 <menu key="menu" autoenablesItems="NO" id="L3K-on-eyR">
                                     <items>
                                         <menuItem title="None" state="on" image="devNoneTemplate" tag="-1" id="xyt-eC-0im"/>
@@ -262,19 +263,6 @@
                                 <action selector="port2Action:" target="1845" id="C7N-LV-PMv"/>
                             </connections>
                         </popUpButton>
-                    </toolbarItem>
-                    <toolbarItem implicitItemIdentifier="D53F1F08-FE98-44C2-80A3-C1D345277E01" label="Keyboard" paletteLabel="Keyboard" toolTip="Open the virtual keyboard" image="keyboardTemplate" sizingBehavior="auto" id="Ckl-d3-vFW">
-                        <button key="view" toolTip="Open the virtual keyboard" verticalHuggingPriority="750" id="rao-xk-L5n">
-                            <rect key="frame" x="14" y="14" width="30" height="23"/>
-                            <autoresizingMask key="autoresizingMask"/>
-                            <buttonCell key="cell" type="roundTextured" bezelStyle="texturedRounded" image="keyboardTemplate" imagePosition="overlaps" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="wG4-oJ-FGJ">
-                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                <font key="font" metaFont="system"/>
-                            </buttonCell>
-                            <connections>
-                                <action selector="keyboardAction:" target="1845" id="ZjQ-aX-vhb"/>
-                            </connections>
-                        </button>
                     </toolbarItem>
                     <toolbarItem implicitItemIdentifier="NSToolbarSpaceItem" id="1850"/>
                     <toolbarItem implicitItemIdentifier="NSToolbarFlexibleSpaceItem" id="1851"/>
@@ -313,6 +301,22 @@
                             </connections>
                         </segmentedControl>
                     </toolbarItem>
+                    <toolbarItem implicitItemIdentifier="C7A4F9D8-7285-41D4-A12F-6E9420DD05C3" label="Switches" paletteLabel="Switches" image="switch.2" catalog="system" sizingBehavior="auto" id="7tu-2g-yoJ">
+                        <nil key="toolTip"/>
+                        <comboButton key="view" verticalHuggingPriority="750" baseWritingDirection="leftToRight" alignment="center" title="" image="switch.2" catalog="system" imageScaling="proportionallyDown" style="unified" id="Sfw-s7-yG9">
+                            <rect key="frame" x="12" y="14" width="32" height="24"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                            <menu key="menu" id="J7U-c8-M3j">
+                                <items>
+                                    <menuItem title="Reset" id="7Ov-av-EQX"/>
+                                    <menuItem title="Select" id="Uae-id-7v3"/>
+                                    <menuItem title="Color" id="vpu-CX-aaU"/>
+                                    <menuItem title="Difficulty A" id="iIw-Hg-Uqx"/>
+                                    <menuItem title="Difficulty B" id="Zk3-l0-2ci"/>
+                                </items>
+                            </menu>
+                        </comboButton>
+                    </toolbarItem>
                 </allowedToolbarItems>
                 <defaultToolbarItems>
                     <toolbarItem reference="GsP-C7-APh"/>
@@ -322,7 +326,7 @@
                     <toolbarItem reference="kR6-IR-lNs"/>
                     <toolbarItem reference="Klt-YL-0mv"/>
                     <toolbarItem reference="1851"/>
-                    <toolbarItem reference="Ckl-d3-vFW"/>
+                    <toolbarItem reference="7tu-2g-yoJ"/>
                     <toolbarItem reference="1851"/>
                     <toolbarItem reference="E7X-uf-vpw"/>
                     <toolbarItem reference="1851"/>
@@ -335,10 +339,10 @@
                     <outlet property="controlPort2Item" destination="Klt-YL-0mv" id="qK2-bf-H6Q"/>
                     <outlet property="controlsItem" destination="tcr-bJ-p79" id="3Ea-pP-E4K"/>
                     <outlet property="controlsSegCtrl" destination="JDC-UY-HHD" id="edL-25-gyY"/>
-                    <outlet property="keyboardItem" destination="Ckl-d3-vFW" id="ERa-sy-J2Z"/>
                     <outlet property="parent" destination="-2" id="T9L-Bq-Pny"/>
                     <outlet property="preferencesItem" destination="E7X-uf-vpw" id="fE2-se-OKZ"/>
                     <outlet property="screenshotSegCtrl" destination="qPe-qh-6UI" id="m5u-9x-Vto"/>
+                    <outlet property="slidersItem" destination="7tu-2g-yoJ" id="r8D-Q8-SsL"/>
                     <outlet property="snapshotSegCtrl" destination="AHD-MB-nXC" id="FJe-yy-eIY"/>
                 </connections>
             </toolbar>
@@ -365,7 +369,6 @@
         <image name="haltTemplate" width="240" height="241"/>
         <image name="hourglass1Template" width="241" height="241"/>
         <image name="inspectTemplate" width="36" height="36"/>
-        <image name="keyboardTemplate" width="36" height="36"/>
         <image name="monitorTemplate" width="36" height="36"/>
         <image name="muteTemplate" width="240" height="241"/>
         <image name="pauseTemplate" width="36" height="36"/>
@@ -375,6 +378,7 @@
         <image name="pushTemplate" width="36" height="36"/>
         <image name="resetTemplate" width="36" height="36"/>
         <image name="srvConnectTemplate" width="48" height="49"/>
+        <image name="switch.2" catalog="system" width="16" height="14"/>
         <image name="timeMachineTemplate" width="36" height="36"/>
     </resources>
 </document>
